// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`[HELPER] Teaser helpers Should render Icon for content type Article properly 1`] = `<div />`;

exports[`[HELPER] Teaser helpers Should render Icon for content type Article properly 2`] = `
<div>
  <div
    class="IconClass"
  >
    <i
      class="Icon IconPlay VideoTeaserIcon"
    />
  </div>
</div>
`;

exports[`[HELPER] Teaser helpers Should render Icon for content type Dossier properly 1`] = `<div />`;

exports[`[HELPER] Teaser helpers Should render Icon for content type ImageGallery properly 1`] = `
<div>
  <div
    class="IconClass"
  >
    <i
      class="Icon IconCamera GalleryTeaserIcon"
    />
  </div>
</div>
`;

exports[`[HELPER] Teaser helpers Should render Icon for content type Video properly 1`] = `
<div>
  <div
    class="IconClass"
  >
    <i
      class="Icon IconPlay VideoTeaserIcon"
    />
  </div>
</div>
`;

exports[`[HELPER] Teaser helpers Should render Source Component for source  correctly 1`] = `<div />`;

exports[`[HELPER] Teaser helpers Should render Source Component for source Beobachter correctly 1`] = `
<div>
  <div>
    Quelle: Beobachter
  </div>
</div>
`;

exports[`[HELPER] Teaser helpers Should render Source Component for source Schweizer Illustrierte correctly 1`] = `
<div>
  <div>
    Quelle: Schweizer Illustrierte
  </div>
</div>
`;

exports[`[HELPER] Teaser helpers Should render Source Component for source null correctly 1`] = `<div />`;
